--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -3,7 +3,7 @@
     <img src="{{photo.url}}" class="img-thumbnail p-1" alt="">
     <div class="text-center">
       <button type="button" class="btn btn-sm m-1" [ngClass]="photo.isMain?'btn-success active' : 'btn-secondary'" (click)="setMainPhoto(photo)" [disabled]="photo.isMain">Main</button>
-      <button type="button" class="btn btn-sm btn-danger m-1" ><i class="fa fa-trash-o"></i></button>
+      <button type="button" class="btn btn-sm btn-danger m-1" (click)="deletePhoto(photo)" [disabled]="photo.isMain"><i class="fa fa-trash-o"></i></button>
     </div>
   </div>
 </div>
