--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -18,6 +18,9 @@
     </ul>
 
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <span class="mr-1">
+        <img src="{{photoUrl}}"/>
+      </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
         Welcome {{authService.decodedToken?.unique_name | titlecase}}
       </a>
@@ -32,10 +35,10 @@
     </div>
 
     <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-      <input id="hest" class="form-control mr-sm-2" type="text" name="username" placeholder="Username" [(ngModel)]="model.username"
-        required #username="ngModel">
-      <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" [(ngModel)]="model.password"
-        required #password="ngModel">
+      <input id="hest" class="form-control mr-sm-2" type="text" name="username" placeholder="Username"
+        [(ngModel)]="model.username" required #username="ngModel">
+      <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password"
+        [(ngModel)]="model.password" required #password="ngModel">
       <button class="btn btn-success my-2 my-sm-0" type="submit" [disabled]="!loginForm.valid">Login</button>
     </form>
   </div>
